# gramd-client-test

./: .autotools  .cproject  .project  Makefile  Makefile.in  config.status  configure  configure.ac  test.c
Debug/: makefile  subdir.mk
Release/: makefile  objects.mk  subdir.mk
autom4te.cache/: output.1  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  test  test.c
src/.deps/: test.Po
